# fxml

./: .gitignore  04_data_preprocessing_part_1.py  CLAUDE.md  Makefile  README.md  backtest.py  environment.yaml  environment.yml  event_pipeline.py  generate_labels.py  get_events.py  labeling.py  macd_optimization_results.csv  main.py  mt5_backtest.py  predict.py  preprocessing.py  pyproject.toml  requirements.in  resampling.py  test.py  tick_analyzer.py  trade.py  train.py  train_clf.py  train_event.py  train_regr.py  train_ret.py  train_side.py  utils.py
config/: config.yaml
configs/: config.yaml  features.yaml  lstm_classifier.yaml  lstm_regressor.yaml  preprocessing.yaml  resample.yaml  resampling.yaml  trade.yaml  transformer_classifier.yaml  transformer_regressor.yaml  ts_seq2seq.yaml  ts_tbm_clf.yaml  tune_t2v_xfmr.yaml
datamodules/: confidence_data_module.py  data_module.py  data_module_grouped.py  event_based_data_module.py  fx_clas_dm.py  fx_regr_dm.py
dataset/: confidence_dataset.py  dataset.py  direction_dataset.py  event_based_dataset.py  forex_clas_dataset.py  forex_dataset.py  forex_regr_dataset.py  grouped_dataset.py  splitter.py  time_based_dataset.py
fxml/: utils.py
libs/: events.py  feature_engineering.py  filters.py  labeling.py  normalization.py  resampling.py  utils.py
models/: criterion.py  fx_datamodule.py  gru.py  gru_classifier.py  gru_model.py  gru_module.py  gru_prob_regr.py  gru_regr.py  lstm_classifier.py  lstm_model.py  lstm_prob_regr.py  lstm_regr.py  t2v_transformer_model.py  transformer_classifier.py  transformer_model.py
(+192 files in other folders)
